[package]
name = "aqt_sim"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Adverserial Queueing Theory (AQT) simulator"
home = "https://github.com/cammatsui/aqt_sim"
repository = "https://github.com/cammatsui/aqt_sim"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.12.3"
rand = "0.8.5"
